biso/kustomize/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: biso
spec:
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: backend-api-server
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: backend-api-server
    spec:
      containers:
      - name: backend
        image: docker.juxtagene.com/services/biso-backend-api-server:latest
        imagePullPolicy: Always
        resources: {}
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
          runAsNonRoot: false
          capabilities:
            add:
              - SYS_ADMIN
              - DAC_READ_SEARCH
              - NET_BIND_SERVICE
        args:
              - /bin/sh
              - -c
              - >
                uvicorn main:app --host 0.0.0.0 --port 8000
#                umask 0000 &&
#                mount -t ceph -o name=admin,fs=cephfs 10.10.123.30:6789:/home /app/userhome &&
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - name: modules
          mountPath: /lib/modules
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: juxtagene-docker-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: modules
        hostPath:
          path: /lib/modules
