biso/kustomize/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: wisdom
spec:
  type: ClusterIP
  selector:
    workload.user.cattle.io/workloadselector: backend-api-server
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
    name: http
