biso/kustomize/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: biso
  annotations:
    nginx.org/websocket-services: "backend"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://miso.juxtagene.com,https://localhost:8080"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET,POST,OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,Authorization"
    cert-manager.io/issuer: letsencrypt-prod-biso
    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
  - host: biso.juxtagene.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
  tls:
  - hosts:
    - biso.juxtagene.com
    secretName: biso-juxtagene-com-tls
